<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="5dp"
    android:background="@color/colorBackg">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:fadeScrollbars="false"
        android:scrollbarThumbVertical="@drawable/scroll"
        android:scrollbarSize="8dip"
        tools:ignore="MissingConstraints"
        android:layout_alignParentLeft="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingRight="20dp"
            android:background="@color/colorBackg">



            <RelativeLayout
                android:id="@+id/RelativeLayout1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorBackg"
                android:backgroundTint="@color/colorBBackg"
                android:backgroundTintMode="src_atop">

                <com.google.android.material.card.MaterialCardView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:id="@+id/item_title_card_search"
                    app:cardCornerRadius="6dp"
                    app:cardElevation="30dp"
                    app:contentPadding="4dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    app:cardBackgroundColor="@color/colorTitle">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/item_search_token"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorTextTitle"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:text="@string/today_s_notice"
                        android:textSize="@dimen/textTitle" />

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:cardCornerRadius="6dp"
                    app:cardElevation="0dp"
                    app:cardBackgroundColor="@color/colorHorizon"
                    app:contentPadding="15dp"
                    >

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_admin_name"
                        android:layout_gravity="fill_horizontal"
                        android:textStyle="bold"
                        android:textSize="@dimen/textNormal"
                        android:textColor="@color/colorTable"
                        android:layout_marginTop="40dp"
                        android:layout_marginBottom="10dp"
                        />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/item_title_add_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorHorizon"
                        android:backgroundTintMode="src_atop"
                        android:layout_marginTop="85dp"
                        app:boxStrokeColor="@color/colorLightBlack"
                        app:boxStrokeWidth="2dp"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/text_area_notice"
                            android:inputType="textMultiLine"
                            android:overScrollMode="always"
                            android:scrollbarStyle="insideInset"
                            android:scrollbars="vertical"
                            android:lines="4"
                            android:scrollHorizontally="false"
                            android:hint="@string/write_notification"
                            android:gravity="top|start"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_submit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginTop="255dp"
                        android:layout_marginLeft="45dp"
                        android:background="@color/colorTitle"
                        android:textColor="@color/colorTextTitle"
                        android:textStyle="bold"
                        app:backgroundTint="@color/colorTitle"
                        android:text="@string/submit"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_remove"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="255dp"
                        android:layout_marginRight="45dp"
                        android:background="@color/colorTitle"
                        android:textColor="@color/colorTextTitle"
                        android:textStyle="bold"
                        app:backgroundTint="@color/colorTitle"
                        android:text="@string/remove"/>

                </com.google.android.material.card.MaterialCardView>

            </RelativeLayout>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="6dp"
                app:cardElevation="0dp"
                app:cardBackgroundColor="@color/colorHorizon"
                app:contentPadding="15dp"
                >

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/current_notice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTable"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="@dimen/textNormal"
                    android:elevation="30dp"/>
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>